--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-json-view": "^1.21.3",
     "react-switch": "^6.0.0",
     "react-toastify": "^8.1.0",
     "reactstrap": "^9.0.1",
